[package]
name = "sira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
crossbeam = "0.8.2"
openssh = { version = "0.10", features = ["native-mux"], optional = true }
tokio = { version = "1.32", features = ["rt"], optional = true }
regex = "1.9"

[features]
default = ["openssh"]
openssh = ["dep:openssh", "dep:tokio"]
