[package]
name = "sira"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
crossbeam = "0.8.2"
home = "0.5"
indexmap = { version = "2.0", features = ["serde"] }
openssh = { version = "0.10", features = ["native-mux"], optional = true }
regex = "1.9"
serde = "1.0"
serde_yaml = "0.9"
shlex = "1.3"
tokio = { version = "1.34", features = ["process", "rt", "rt-multi-thread"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["openssh"]
openssh = ["dep:openssh", "dep:tokio"]
